prevent horizontal scroll

--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -22,14 +22,13 @@
 }
 
 .image-container img {
-  border-bottom: 15px solid #e06969;
-  border-left: 15px solid #e06969;
+  border-bottom: 10px solid #e06969;
+  border-left: 10px solid #e06969;
   width: 100%;
   max-height: 200px; 
   max-width: 300px;
   object-fit: cover; 
   display: block; 
-   
 }
 
 .project-content {
