--- a/src/Components/Words.css
+++ b/src/Components/Words.css
@@ -3,6 +3,7 @@
   display: block; 
   height: auto; 
   margin-bottom: -1px;
+  background-color: transparent;
 }
 
 .words-container {
@@ -38,8 +39,8 @@
   height: auto;
   margin-bottom: 10px;
   margin-left: 20px;
-  border-bottom: 15px solid #e06969;
-  border-left: 15px solid #e06969;
+  border-bottom: 10px solid #e06969;
+  border-left: 10px solid #e06969;
 }
 
 .article-date {
