--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,15 @@ a:hover {
   color: #535bf2;
 }
 
+
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 h1 {
